creating canvas andadding controlable object

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
   <title>Game Demo</title>
 </head>
 <body>
-  <canvas id = "gc" width="200px" height="200px"></canvas>
+  <canvas id = "gc" width = "400" height = "400" ></canvas>
 </body>
 <script src = "demo.js">
 </script>
