adding a score and making enemies infinite

--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,14 @@
 <html>
+
 <head>
   <title>Game Demo</title>
 </head>
+
 <body>
-  <canvas id = "gc" width = "400" height = "400" ></canvas>
+  <canvas id="gc" width="400" height="400"></canvas>
+  <p id="points"> </p>
 </body>
-<script src = "demo.js">
+<script src="demo.js">
 </script>
+
 </html>
